# MOTHBALLED-g

./: .gitignore  AUTHORS  BUGS  Doxyfile.in  Makefile  Makefile.am  Makefile.old  NOTES  NOTES.md  PERSIST.NOTES  README.md  README.md.html  README_long_version.md  TODO  TODO.md  autogen.sh  configure.ac  dotest.sh  example1.g  example1.gv  example2.g  example2.gv  example3.g  example4.g  first_light.g  g.bnf  g.ebnf  g.spec  g.spec.in  g2gv.sh  gg.sh  index.html  index.html.sh  ntest.sh  outbuf.c  red_black_tree.LICENSE  red_black_tree.c  render.sh  testdiff.sh  testref.sh  (+1 more)
comm/: ToDo  reconcile.c
doc/: annotated_grammar.ebnf  g.ebnf  g_statemachine.gv
doc/sketches/: Makefile
example/rendering/: L+n3ye.g  L+n3ye.gv  Makefile  QhxNFh.g  QhxNFh.gv  kc8dcM.g  kc8dcM.gv
experiment/: InBGIA  InBGIA.gv  InBGIA.png.gv  InBGIA.svg.gv  K2b9Jh.png.gv  OXwqco  OXwqco.gv  OXwqco.png.gv  OXwqco.svg.gv  README  abc.g
graphs/: Makefile  edge_into_container_using_nodepath.g  edge_into_container_via_port.g  implement_netlist_with_edge_container_1.g  implement_netlist_with_edge_container_2.g  implement_netlist_with_edge_container_3.g  multi_node_multi_edge_1.g  multi_node_multi_edge_2.g  multi_node_multi_edge_3.g  netlist.g
neo4j/: matrix.g  matrix.neo4j
ntests/: attribute1.g  comment1.g  compare1.g  compare2.g  edge1.g  edge4.g  edge5.g  node1.g  node2.g  quote1.g  quote2.g  quote5.g  quote7.g  sameas10.g  sameas11.g  sameas3.g  sameas4.g  sameas5.g  sameas6.g  sameas7.g  sameas8.g  sameas9.g  set1.g  set3.g  vstring10.g  vstring3.g  vstring6.g  vstring8.g
otests/: alledges.1bug  compare.g  container.g  edges.g  eof_inquote.badg.1bug  escape.g  ports.1bug  reduce.g  value.badg
src/: .gitignore  Makefile  Makefile.am  Makefile.old  alternate_grammar.g  attribute.c  attribute.h  cmp.c  comm.c  compare.c  compare.h  container.c  container.h  content.c  content.h  context.h  dispatch.c  dispatch.h  doact.c  doact.h  dotest.sh  dumpg.c  dumpg.h  emit.c  emit.h  emit_act.c  emit_act.h  emit_act2.c  emit_g.c  emit_gv.c  emit_ikea.c  emit_t.c  emit_trace.c  error_functions.c  error_functions.h  expand.c  expand.h  expand_edge.c  expand_edge.h  family.c  (+93 more)
src/EXPERMENTAL/: main.c  makefile
src/UNUSED/: attribute.c  attribute.h  comm.c  emit.c  emit.h  emit_act.c  emit_act.h  emit_g.c  emit_gv.c  emit_ikea.c  emit_t.c  hash.c  hash.h  outbuf.c  pattern.h  sslhash.c  sslhash.h  token.c.ABC+AST
src/unused/: emit_t.c
tests/: Makefile  attribute0.g  attribute1.g  attribute2.g  attribute3.g  attribute4.g  attribute5.g  attribute6.g  attribute7.g  attribute8.g  comment2.g  comments.g  compare3.g  compare4.g  content1.g  content2.g  content3.g  content4.g  disambig.g  disambig1.g  disambig2.g  disambig3.g  disambig4.g  disambig5.g  dispatch.g  edge2.g  edge3.g  edge6.g  edge_in_node_subj.badg  edge_subject_includes_node.badg  edges.g  eof_inquote.badg  escape.g  hello.g  hello_world.g  identifiers.g  iter.g  node3.g  node6.g  node_attributes.g  (+37 more)
tests/BROKEN/: alledges.g  attribute8.g  content3.g  content4.g  dispatch1.g  dispatch2.g  identifier1.badg  iter.g  node4.g  node5.g  port1.g  port2.g  port3.g  port4.g  port5.g  pretty1.g  set4.g  set5.g  syntax2.badg  syntax3.badg  syntax4.badg  syntax5.badg  syntax6.badg  verbs.g
